<resources>
    <string name="app_name">NeshanTiana</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_customers">مشتریان نزدیک</string>
    <string name="routing">مسیریابی</string>
    <string name="dispersion_customers">پراکندگی مشتریان</string>
    <string name="my_location">موقعیت من</string>
    <string name="last_visits">آخرین ویزیت ها</string>
    <string name="add_customers">تعریف مختصات مشتری</string>
    <string name="edit_customers">تغییر مختصات مشتری</string>
    <string name="search_customers">مختصات مشتریان</string>
</resources>